<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- app info-->
    <string name="app_name">BestPracticeForAndroid</string>

    <!-- nav text -->
    <string name="description_userimage">User Image</string>
    <string name="home">Home</string>
    <string name="item1">Item1</string>
    <string name="item2">Item2</string>
    <string name="setting">Setting</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Setting text -->
    <string name="pref_noti_category">Notification</string>
    <string name="pref_noti">Notification setting</string>
    <string name="pref_noti_cycletime">On notification cycle</string>
    <string name="pref_summary_noti_cycletime">Alarm on 10 minute</string>

    <string name="pref_aboutus_category">About us</string>
    <string name="pref_aboutus">Developers</string>
    <string name="pref_summ_aboutus">Ace Kim / Gyuhwan Park / Kahye Wi</string>
    <string name="pref_github">Show project repo</string>
    <string name="pref_summ_github">https://github.com/Acegugu/BestPracticeForAndroid</string>



</resources>
