<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="pref_noti_category"
        android:title="@string/pref_noti_category"
        >
        <SwitchPreferenceCompat
            android:key="pref_noti"
            android:title="@string/pref_noti"
            android:defaultValue="true">
        </SwitchPreferenceCompat>
        <Preference
            android:key="pref_noti_cycletime"
            android:title="@string/pref_noti_cycletime"
            android:dependency="pref_noti"
            android:summary="@string/pref_summary_noti_cycletime">
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_aboutus_category"
        android:title="@string/pref_aboutus_category">
        <Preference
            android:key="pref_aboutus"
            android:title="@string/pref_aboutus"
            android:summary="@string/pref_summ_aboutus">
        </Preference>
        <Preference
            android:key="pref_github"
            android:title="@string/pref_github"
            android:summary="@string/pref_summ_github">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://github.com/Acegugu/BestPracticeForAndroid"/>
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>